# numerai-ML

./: .gitignore  README.md  main.py  numerai_project_lite.ipynb  numerai_utils.py  pyproject.toml  requirements-gpu.txt  requirements.txt
notebooks/: numerai_gpu_advanced.ipynb  numerai_project.ipynb
scripts/: check_gpu.py  demo_tiny.py  quick_start.py  quick_start_lite.py  verify_setup.py
