[project]
name = "numerai-ml-project"
version = "1.0.0"
description = "Complete ML project for Numerai stock market prediction - University final project"
readme = "README.md"
requires-python = ">=3.8.1"
authors = [
    {name = "ML Student", email = "student@example.com"}
]
keywords = ["numerai", "machine-learning", "finance", "stock-prediction", "ml-project"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "numerapi>=2.18.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/numerai-ml-project"
Documentation = "https://github.com/yourusername/numerai-ml-project/blob/main/README.md"
Repository = "https://github.com/yourusername/numerai-ml-project"
"Bug Tracker" = "https://github.com/yourusername/numerai-ml-project/issues"

[project.scripts]
numerai-quickstart = "quick_start:main"
numerai-verify = "verify_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
